--- a/BackendApi/package.json
+++ b/BackendApi/package.json
@@ -3,5 +3,15 @@
     "express": "^4.21.1",
     "swagger-ui-express": "^5.0.1",
     "tall": "^8.0.0"
-  }
+  },
+  "name": "backendapi",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
