--- a/FrontendApi/package.json
+++ b/FrontendApi/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "moviesapi",
+  "name": "frontend",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "lint": "eslint . --fix"
   },
   "dependencies": {
     "vue": "^3.5.13"
@@ -16,10 +15,8 @@
   "devDependencies": {
     "@eslint/js": "^9.14.0",
     "@vitejs/plugin-vue": "^5.2.1",
-    "@vue/eslint-config-prettier": "^10.1.0",
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^9.30.0",
-    "prettier": "^3.3.3",
     "vite": "^6.0.1",
     "vite-plugin-vue-devtools": "^7.6.5"
   }
