--- a/BackendApi/package.json
+++ b/BackendApi/package.json
@@ -1,12 +1,7 @@
 {
-  "dependencies": {
-    "express": "^4.21.1",
-    "swagger-ui-express": "^5.0.1",
-    "tall": "^8.0.0",
-    "yamljs": "^0.3.0"
-  },
   "name": "backendapi",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,8 +9,18 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "directories": {
-    "doc": "docs"
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.1",
+    "mariadb": "^3.4.0",
+    "nodemon": "^3.1.7",
+    "sequelize": "^6.37.5",
+    "swagger-ui-express": "^5.0.1",
+    "yamljs": "^0.3.0"
   },
-  "description": ""
+  "devDependencies": {
+    "eslint": "^9.16.0",
+    "eslint-plugin-import": "^2.31.0"
+  }
 }
