fix errors wit database connection + frontend errors

--- a/BackendApi/.env
+++ b/BackendApi/.env
@@ -1,6 +1,6 @@
 SYNC = true
 PORT = 8080
 DB_HOSTNAME = d124967.mysql.zonevs.eu
-DB_DATANAME = d124967_movieapi
+DB_DATANAME = d124967_movies
 DB_USERNAME = d124967_movieappuser
 DB_PASSWORD = TARgv23moviesAPI
